Adicionado texto no body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Curso Gratuito Git e GitHub</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, quasi fugit, quae iste eaque, nostrum exercitationem saepe libero iure repudiandae vero commodi ipsa qui. Quia esse harum labore soluta voluptates?</p>
 </body>
 </html>
