Adicionado svgs + index html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime, quasi fugit, quae iste eaque, nostrum exercitationem saepe libero iure repudiandae vero commodi ipsa qui. Quia esse harum labore soluta voluptates?</p>
+    <img src="assets/svgs/icon-user.svg">
 </body>
 </html>
